--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	compile('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
+//	compile "org.eclipse.persistence:org.eclipse.persistence.jpa:2.7.1"
 	compile "org.eclipse.persistence:org.eclipse.persistence.jpa:2.6.4"
+
 	compileOnly 'org.projectlombok:lombok:1.16.18'
 
 	compile group: 'ma.glasnost.orika', name: 'orika-core', version: '1.5.2'
