--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ repositories {
 	mavenCentral()
 }
 
+artifacts {
+	archives file: file("build/libs/lazy-loading-test.jar")
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -35,6 +38,7 @@ dependencies {
 	compile "org.eclipse.persistence:org.eclipse.persistence.jpa:2.6.4"
 	compile "org.eclipse.persistence:eclipselink:2.6.4"
 
+	compile group: 'de.empulse.eclipselink', name: 'staticweave-maven-plugin', version: '1.0.0'
 
 	compileOnly 'org.projectlombok:lombok:1.16.18'
 	compileOnly 'javax.ws.rs:javax.ws.rs-api:2.0.1'
@@ -42,3 +46,19 @@ dependencies {
 	compile group: 'ma.glasnost.orika', name: 'orika-core', version: '1.5.2'
 
 }
+
+task performJPAWeaving(type: JavaExec, dependsOn: "compileJava"){
+	inputs.dir compileJava.destinationDir
+	outputs.dir compileJava.destinationDir
+	main "org.eclipse.persistence.tools.weaving.jpa.StaticWeave"
+	args  "-persistenceinfo",
+			"src/main/resources",
+			compileJava.destinationDir.getAbsolutePath(),
+			compileJava.destinationDir.getAbsolutePath()
+	classpath = configurations.compile
+}
+
+tasks.withType(Jar){
+	dependsOn "performJPAWeaving"
+}
+
