--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+
+
 buildscript {
 	ext {
 		springBootVersion = '1.5.6.RELEASE'
@@ -14,10 +16,12 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'application'
 
 group = 'com.omg'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+applicationDefaultJvmArgs = ["-javaagent:C:\\spring-instrument-4.1.6.RELEASE.jar"]
 
 repositories {
 	mavenCentral()
@@ -34,7 +38,6 @@ dependencies {
 	compile('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
-//	compile "org.eclipse.persistence:org.eclipse.persistence.jpa:2.7.1"
 	compile "org.eclipse.persistence:org.eclipse.persistence.jpa:2.6.4"
 	compile "org.eclipse.persistence:eclipselink:2.6.4"
 
@@ -45,44 +48,8 @@ dependencies {
 
 	compile group: 'ma.glasnost.orika', name: 'orika-core', version: '1.5.2'
 	compile group: 'org.springframework', name: 'spring-instrument', version: '4.1.6.RELEASE'
-	compile group: 'org.springframework', name: 'spring-instrument-tomcat', version: '4.1.6.RELEASE'
 
 
 }
 
-//task performJPAWeaving(type: JavaExec, dependsOn: "compileJava"){
-//	inputs.dir compileJava.destinationDir
-//	outputs.dir compileJava.destinationDir
-//	main "org.eclipse.persistence.tools.weaving.jpa.StaticWeave"
-//	args  "-persistenceinfo",
-//			"src/main/resources",
-//			compileJava.destinationDir.getAbsolutePath(),
-//			compileJava.destinationDir.getAbsolutePath()
-//	classpath = configurations.compile
-//}
-//
-//tasks.withType(JavaCompile){
-//	doLast{
-//		tasks.performJPAWeaving.execute()
-//	}
-//}
-
-//task weaveJpaEntities(type: JavaExec, dependsOn: "compileJava"){
-//	inputs.dir compileJava.destinationDir
-//	outputs.dir compileJava.destinationDir
-//	main "org.eclipse.persistence.tools.weaving.jpa.StaticWeave"
-//	args "-persistenceinfo", "src/main/resources",
-//			compileJava.destinationDir.getAbsolutePath(),
-//			compileJava.destinationDir.getAbsolutePath()
-//	//,"-loglevel", "FINE"
-//	classpath = configurations.compile
-//}
-//
-//classes.dependsOn weaveJpaEntities
-//
-//tasks.withType(JavaCompile){
-//	doLast{
-//		tasks.weaveJpaEntities.execute()
-//	}
-//}
 
